# speckit-python

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  extension.yml  install.sh  pyproject.toml
.claude/commands/: speckit-adr-audit.md  speckit-adr-new.md  speckit-adr-supersede.md  speckit-audit-deep.md  speckit-audit.md  speckit-constitution-scan.md  speckit-context-refresh.md  speckit-decision-audit.md  speckit-decision-new.md  speckit-decision-supersede.md  speckit-docs-sync.md  speckit-feature.md  speckit-help.md  speckit-plan.md  speckit-scaffold-module.md  speckit-tasks.md
.specify/: waivers.yml
.specify/memory/: constitution.md
docs/adr/: 0000-template.md  0001-adopt-spec-driven-development-for-python.md  0002-ship-skills-and-knowledge-base-self-propelled.md  README.md
knowledge/: README.md  architecture.md  code-quality.md  concurrency.md  data-and-boundaries.md  design-patterns.md  error-handling.md  observability.md  packaging.md  performance.md  principles.md  refactoring.md  security.md  testing.md  type-safety.md
presets/python/: README.md  preset.yml
presets/python/commands/: speckit.adr.audit.md  speckit.adr.new.md  speckit.adr.supersede.md  speckit.audit.deep.md  speckit.audit.md  speckit.constitution.scan.md  speckit.context.refresh.md  speckit.decision.audit.md  speckit.decision.new.md  speckit.decision.supersede.md  speckit.docs.sync.md  speckit.feature.md  speckit.help.md  speckit.plan.md  speckit.scaffold.module.md  speckit.tasks.md
presets/python/scripts/: SCHEMA.md
presets/python/scripts/bash/: audit-codebase.sh  scan-repo.sh
presets/python/templates/: agent-context.md  constitution-template.md
scripts/: build-skills.py
skills/speckit-adr-audit/: SKILL.md
skills/speckit-adr-new/: SKILL.md
skills/speckit-adr-supersede/: SKILL.md
skills/speckit-audit/: SKILL.md
skills/speckit-audit-deep/: SKILL.md
skills/speckit-constitution-scan/: SKILL.md
skills/speckit-context-refresh/: SKILL.md
skills/speckit-decision-audit/: SKILL.md
skills/speckit-decision-new/: SKILL.md
skills/speckit-decision-supersede/: SKILL.md
skills/speckit-docs-sync/: SKILL.md
skills/speckit-feature/: SKILL.md
skills/speckit-help/: SKILL.md
skills/speckit-plan/: SKILL.md
skills/speckit-scaffold-module/: SKILL.md
skills/speckit-tasks/: SKILL.md
workflows/: README.md
workflows/python-feature/: workflow.yml
