[project]
name = "speckit-python"
version = "0.1.0"
description = "A state-of-the-art, Spec-Driven Development toolkit specialized for Python — constitution, commands, workflows, and ADR memory enforcing uv + Ruff + mypy --strict + pytest."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Satcomx00-x00" }]
keywords = ["spec-kit", "spec-driven-development", "python", "mypy", "ruff", "uv", "pytest", "adr"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

# This repository ships specs, commands, templates, and scripts — not a runtime
# library. The configuration below is the reference, canonical toolchain the
# Python preset's constitution mandates for any project that adopts it. Copy it
# into a new project to satisfy the P1 packaging/tooling directives out of the box.

[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ──────────────────────────────────────────────────────────────────────────────
# Ruff — single linter + formatter (Constitution: Code Quality & Style)
# ──────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# A strong, opinionated rule set. Fix or justify with `# noqa: CODE  # reason`.
select = [
  "E", "W",    # pycodestyle
  "F",         # pyflakes
  "I",         # isort
  "N",         # pep8-naming
  "UP",        # pyupgrade
  "B",         # flake8-bugbear
  "C4",        # flake8-comprehensions
  "SIM",       # flake8-simplify
  "TID",       # flake8-tidy-imports (banned relative/circular patterns)
  "PTH",       # flake8-use-pathlib
  "ANN",       # flake8-annotations (enforce typed signatures)
  "ASYNC",     # flake8-async
  "S",         # flake8-bandit (security)
  "RUF",       # Ruff-specific rules
]
ignore = [
  "ANN401",    # allow `Any` only where deliberately re-exported; prefer precise types
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN201"]   # asserts and looser annotations are fine in tests

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"        # no `from ...pkg import x` reaching across the tree

[tool.ruff.lint.isort]
known-first-party = ["speckit_python"]

# ──────────────────────────────────────────────────────────────────────────────
# mypy — strict static typing (Constitution: Type-Safety Without Escape Hatches)
# ──────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_any_generics = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
extra_checks = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code", "possibly-undefined"]
show_error_codes = true
pretty = true
files = ["src", "tests"]

# ──────────────────────────────────────────────────────────────────────────────
# pytest — deterministic test suite (Constitution: Testing)
# ──────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
